added people page and formatting for about page

--- a/app/views/default/about.html.erb
+++ b/app/views/default/about.html.erb
@@ -1,10 +1,15 @@
-<h1>Welcome to TwHistory.</h1>
+<div class="common-content">
+  <h1>Welcome to TwHistory</h1>
 
-<p>We believe that history is filled with exciting stories. We also believe that these stories can be told by 
-  creating virtual reenactments using Twitter, a popular micro-blogging service that allows 140 character 'tweets'.</p>
-<p>The process is simple. Students or volunteers pick a well-documented historical event. They pick real historical figures 
-  who were at that event, and create tweets based on original source documentation. These tweets are then scheduled to be 
-  broadcast in real time. The end result is a virtual reenactment of a historical event, broadcast in real time.</p>
-<p>These virtual reenactments allow a new way to experience history. Instead of reading about a month-long campaign 
-in just a few hours, followers experience the campaign over the course of a month, all in real time. 
-Together, the separate tweets combine to paint a complete and unique picture of a small segment of history.</p>
+  <p>We believe that history is filled with exciting stories. We also believe that these stories can be told by 
+    creating virtual reenactments using Twitter, a popular micro-blogging service that allows 140 character 'tweets'.</p>
+  
+  <p>The process is simple. Students or volunteers pick a well-documented historical event. They pick real historical figures 
+    who were at that event, and create tweets based on original source documentation. These tweets are then scheduled to be 
+    broadcast in real time. The end result is a virtual reenactment of a historical event, broadcast in real time.</p>
+  
+  <p>These virtual reenactments allow a new way to experience history. Instead of reading about a month-long campaign 
+  in just a few hours, followers experience the campaign over the course of a month, all in real time. 
+  Together, the separate tweets combine to paint a complete and unique picture of a small segment of history.</p>
+  
+</div>
