--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -4,6 +4,7 @@
 		<li><a href="/projects">ReEnactments</a></li>
 		<li><a href="/broadcasts">Broadcast Schedule</a></li>
 		<li><a href="/blog">In the News</a></li>
+		<li><a href="/people">People</a></li>
 		<li><a href="/about">About</a></li>
 		<li><a href="http://twhistory.org/stay-in-touch/">Contact</a></li>
 	</ul>
