--- a/app/views/default/people.html.erb
+++ b/app/views/default/people.html.erb
@@ -9,6 +9,16 @@
   </div>
   
   <div class="bio">
+    <img src="/images/people/tomcaswell.jpg" alt="Tom Caswell" />
+    <p>Tom Caswell is an Open Education Consultant and founder of Dynamic E-Learning Strategies, Inc. he has consulted for the OpenCourseWare Consortium at MIT, 
+      The Open University of Catalonia, and Creative Commons. He is particularly interested in personal learning environments, mobile learning, 
+      instructional game design, Open Educational Resources, and micro-learning using Twitter. His other professional experiences include High School teaching, 
+      project management, web application testing, and technical writing. Tom is a PhD student in the Department of Instructional Technology and 
+      Learning Sciences at Utah State University. He is also co-founder of TwHistory.org, a project focused on creating and sharing online historical 
+      reenactments using Twitter.</p>
+  </div>
+  
+  <div class="bio">
     <img src="/images/people/justinball.jpg" alt="Justin Ball" />
     <p>Justin Ball is the TwHistory software lacky and is a software consultant and entrepreneur with a passion for Ruby. He evolved from a C++ and .Net 
       monkey into a python programmer and finally found Ruby. In the rare moments when he isn't writing code, 
