updated footer and people page

--- a/app/views/default/people.html.erb
+++ b/app/views/default/people.html.erb
@@ -10,12 +10,11 @@
   
   <div class="bio">
     <img src="/images/people/tomcaswell.jpg" alt="Tom Caswell" />
-    <p>Tom Caswell is an Open Education Consultant and founder of Dynamic E-Learning Strategies, Inc. he has consulted for the OpenCourseWare Consortium at MIT, 
-      The Open University of Catalonia, and Creative Commons. He is particularly interested in personal learning environments, mobile learning, 
-      instructional game design, Open Educational Resources, and micro-learning using Twitter. His other professional experiences include High School teaching, 
-      project management, web application testing, and technical writing. Tom is a PhD student in the Department of Instructional Technology and 
-      Learning Sciences at Utah State University. He is also co-founder of TwHistory.org, a project focused on creating and sharing online historical 
-      reenactments using Twitter.</p>
+    <p>Tom Caswell is Open Education Program Manager at the Washington State Board for Community and Technical Colleges (SBCTC). He has also consulted for 
+      the OpenCourseWare Consortium at MIT, The Open University of Catalonia, and Creative Commons. Tom is particularly interested in Open 
+      Educational Resources, and micro-learning using Twitter. His other professional experiences include High School teaching, project management, 
+      web application testing, and technical writing. Tom is a PhD student in the Department of Instructional Technology and Learning Sciences at 
+      Utah State University. Tom enjoys cycling, traveling to new places, and blogging at <a href="http://tomcaswell.com">http://tomcaswell.com</a>.</p>
   </div>
   
   <div class="bio">
