--- a/app/views/default/people.html.erb
+++ b/app/views/default/people.html.erb
@@ -19,10 +19,12 @@
   
   <div class="bio">
     <img src="/images/people/justinball.jpg" alt="Justin Ball" />
-    <p>Justin Ball is the TwHistory software lacky and is a software consultant and entrepreneur with a passion for Ruby. He evolved from a C++ and .Net 
-      monkey into a python programmer and finally found Ruby. In the rare moments when he isn't writing code, 
-      talking about code or measuring his code productivity in profanity per hour, you can find him on his bike 
-      in the mountains or on the roads surrounding Cache Valley. Justin can be found pontificating at <a href="http://www.justinball.com">http://www.justinball.com</a>.</p>
+    <p>Justin Ball is chief TwHistory software lacky. Justin has been involved in the OER movement since 2006 and spends his days
+      writing software as a consultant and entrepreneur with a passion for Ruby. He evolved from a C++ and .Net 
+      monkey into a Python programmer and finally found Ruby. In the rare moments when he isn't writing code, 
+      talking about code or measuring his code productivity in <a href="http://www.justinball.com/2006/07/29/pph-profanity-per-hour/">profanity per hour</a>, you can find him 
+      biking in the mountains or on the roads surrounding Cache Valley.
+      Justin can be found pontificating at <a href="http://www.justinball.com">http://www.justinball.com</a>.</p>
   </div>
   
 </div>
