--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -9,6 +9,6 @@
 		<li><a href="http://twhistory.org/stay-in-touch/">Contact</a></li>
 	</ul>
 	<p>copyleft TwHistory Online Licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons BY SA</a>: feel free to use, adapt and share, but always share alike</p> 
-	<p>TwHistory was funded by a generous grant from the<a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">Talis Incubator for Open Education?</a></p>
+	<p>TwHistory was funded by a generous grant from the<a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">Talis Incubator for Open Education</a></p>
 </div>
 <%= output_flash(:class => "notify-box") %>
