Updated login and email check

--- a/app/views/layouts/global/_header.html.erb
+++ b/app/views/layouts/global/_header.html.erb
@@ -2,7 +2,7 @@
 	<h1 class="logo"><a href="/">Twistory</a></h1>
 	<div class="form-holder"> 
 		<%= render :partial => 'layouts/global/login_controls' %>
-		<a href="#" class="btn-corner">Teachers corner</a> 
-	</div><!-- form holder --> 
+		<a href="/teachers" class="btn-corner">Teachers corner</a> 
+	</div>
 	<strong class="slogan">Those who forget history are doomed to re-tweet it</strong>
 </div>
