--- a/app/views/layouts/global/_side_bar.html.erb
+++ b/app/views/layouts/global/_side_bar.html.erb
@@ -12,8 +12,8 @@
 		<li><a href="<%= broadcasts_path %>" class="text-see"><span>See broadcast schedule</span></a></li> 
 		<li><a href="<%= projects_path %>" class="text-browse"><span>Browse Re-enactments</span></a></li> 
 		<li><a href="<%= new_project_path %>" class="text-create"><span>Create Re-enactment</span></a></li> 
-	</ul><!-- options list --> 
-	<h3 class="text-twhistory">TwHistory in the news</h3><!-- text Twhistory --> 
+	</ul>
+	<h3 class="text-twhistory">TwHistory in the news</h3>
 	<ul class="about-list">
 	  <li>"Seeing the events <strong>unfold in real time</strong> gave me a completely new perspective."</li>
 	  <li>"Students learned to <strong>see primary sources as accessible</strong>, not scary." </li>
