--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -46,8 +46,8 @@ a:hover{text-decoration:none;}
 .main-holder{height:1%;overflow:hidden;padding:2px 14px 0;}
 /* content start */
 #content{padding:34px 0 0 25px;width:678px;line-height:17px;float:left;}
-.feature{width:703px;margin:-34px 0 24px -25px;position:relative;padding-top:22px;background:url(/images/bg-feature-top.gif) no-repeat;}
-.feature-indicator{margin:-34px 0 24px 63px;width:59px;position:relative;padding-top:25px;z-index:1000;background:url(/images/bg-feature-top-arrow.gif) no-repeat;}
+.feature{width:703px;margin:-20px 0 24px -25px;position:relative;padding-top:22px;background:url(/images/bg-feature-top.gif) no-repeat;}
+.feature-indicator{top:53px;width:59px;height:16px;position:absolute;z-index:1000;background:url(/images/bg-feature-arrow.png) no-repeat;}
 .feature-holder{height:1%;padding:0 25px 20px;position:relative;background:url(/images/bg-feature-bottom.gif) no-repeat 0 100%;}
 #content .text-feature{width:235px;height:40px;text-indent:-9999px;overflow:hidden;margin:0 0 -3px -18px;background:url(/images/text-featured.gif) no-repeat;}
 .feature .row{height:1%;overflow:hidden;}
