Added tracking code. Fixed spelling

--- a/app/views/layouts/global/_header.html.erb
+++ b/app/views/layouts/global/_header.html.erb
@@ -1,5 +1,5 @@
 <div id="header">
-	<h1 class="logo"><a href="/">Twistory</a></h1>
+	<h1 class="logo"><a href="/">TwHistory</a></h1>
 	<div class="form-holder"> 
 		<%= render :partial => 'layouts/global/login_controls' %>
 		<a href="/teachers" class="btn-corner">Teachers corner</a> 
