fixing follow and broadcast links

--- a/app/views/broadcasts/_broadcast.html.erb
+++ b/app/views/broadcasts/_broadcast.html.erb
@@ -1,14 +1,7 @@
 <li class="hidden-admin_links"> 
   <strong class="broadcast-title"><%= link_to broadcast.project.title, broadcast.project %></strong>
-  <span class="date"><%= format_date_long(broadcast.start_at) %> to <%= format_date_long(broadcast.end_at) %></span> 
-  <ul class="follow-list"> 
-  <!--
-    <li><a href="#" class="comments">comments</a></li> 
-    <li><a href="#" class="people">people</a></li> 
-    <li><a href="#" class="doc">doc</a></li> 
-  -->
-    <li><%= link_to translate('general.follow'), "http://twitter.com/#{broadcast.authentication.nickname}", :class => 'follow', :target => 'blank' if broadcast.authentication %></li> 
-  </ul>
+  <span class="date"><%= format_date_long(broadcast.start_at) %> to <%= format_date_long(broadcast.end_at) %></span>
+  <%= render 'projects/options_list', :project => broadcast.project, :css => 'follow-list' %>
   <% if broadcast.project.can_edit?(current_user) -%>
   <span class="edit admin-links">
     <%= button_to translate('general.edit'), edit_project_broadcast_path(broadcast.project, broadcast), :method => :get %>
