--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,9 +1,9 @@
 <div class="result-box"> 
 	<div class="heading">
-	  <%= render 'projects/options_list', :project => project %> 
+	  <%= render 'projects/options_list', :project => project, :css => 'options-list' %> 
 		<h3 class="text-sinking3"><%= link_to project.title, project %></h3>
 	</div>
 	<span class="author"><strong>Recreated by:</strong><%= project.user.display_name %></span>
-	<%= next_project_broadcast(project) %>
+	<%= next_project_broadcast(project).html_safe %>
 	<p><%= project.description %></p> 
 </div>
