--- a/app/views/layouts/global/_footer.html.erb
+++ b/app/views/layouts/global/_footer.html.erb
@@ -3,7 +3,7 @@
 		<li><a href="/">Home</a></li>
 		<li><a href="/projects">ReEnactments</a></li>
 		<li><a href="/broadcasts">Broadcast Schedule</a></li>
-		<li><a href="http://twhistory.org/press-and-presentations/">In the News</a></li>
+		<li><a href="http://blog.twhistory.org/">Blog</a></li>
 		<li><a href="/people">People</a></li>
 		<li><a href="/about">About</a></li>
 		<li><a href="http://twhistory.org/stay-in-touch/">Contact</a></li>
