--- a/app/views/default/about.html.erb
+++ b/app/views/default/about.html.erb
@@ -12,10 +12,13 @@
   in just a few hours, followers experience the campaign over the course of a month, all in real time. 
   Together, the separate tweets combine to paint a complete and unique picture of a small segment of history.</p>
   
-  <p style="text-align:center;margin:30px auto;">
-    TwHistory was funded by a generous grant from the <a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">Talis Incubator for Open Education</a>
-    <a href="http://blogs.talis.com/education/2010/04/08/winners-of-the-talis-incubator-for-open-education-fund-announced/">
-      <img style="margin: 5px;" title="Talis-Incubator" src="http://blog.twhistory.org/wp-content/uploads/2010/04/Talis-Incubator-300x198.jpg" alt="" width="240" height="158">
+  <p style="text-align:center;margin:30px auto 5px auto;">
+    <a href="http://www.talis.com">Supported by a grant from the Talis Incubator for Open Education</a>
+  </p>
+  
+  <p style="text-align:center;margin:0px auto;">
+    <a href="http://www.talis.com">
+      <img style="margin: 5px;" title="Talis-Incubator" src="/images/talis.png" alt="Talis" />
     </a>
   </p>
   
