--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -16,11 +16,19 @@
 	<div id="csv">
     <div id="event-upload-form" class="common-form">
       <h1>Upload a CSV file</h1>
+      
       <%= form_for :item, :url => project_items_path(@project), :html => { :multipart => true } do |f| -%>
         <%= f.file_field :csv %>
         <%= f.submit "Upload", :id => 'upload_csv', :class => 'wait-button' %>
         <div class="waiting"><%=translate('items.wait') %></div>
       <% end -%>
+      
+      <div id="csv-instructions">
+        <p>The csv file must use the following order:</p>
+        <p class="header-info header-instructions">Event Date, Event Time, Historical Character, Event Text, Location, Event Source, Historical Character Image Url</p>
+        <p class="header-example">Location, Event Source, Historical Character Image Url are all option fields.</p>
+        <p class="header-example"><a href="/events.csv">Download an example csv file</a></p>
+      </div>
     </div>
 	</div>
 </div>
