--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -9,10 +9,10 @@
     <div id="main">
       <%= render :partial => 'layouts/global/timeline' %>
       <div class="main-holder"> 
-    		<div id="content">
+    		<div id="content" <%='style="width:888px;'.html_safe if @sidebar_off %>">
           <%= yield :layout %>
         </div>
-    		<%= render :partial => 'layouts/global/side_bar' %>
+    		<%= render :partial => 'layouts/global/side_bar' unless @sidebar_off %>
     	</div>
     </div>
     <%= render :partial => 'layouts/global/footer' %>
