--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -11,6 +11,21 @@ blockquote,q{quotes:none;}
 table{border-collapse:collapse;border-spacing:0;}
 .spaced-10{margin:10px;}
 input,textarea,select{vertical-align:middle;font-family:inherit;font-size:1em;}
+.button{display:inline-block;position:relative;background:#aaa;padding:5px;float:left;color:#fff;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.button *{font-style:normal;background-image:url(/images/btn_outline.png);background-repeat:no-repeat;display:block;position:relative;}
+.button-blue-back *{background-image:url(/images/btn_outline_blue.png)}
+.button i{background-position:top left;position:absolute;margin-bottom:-5px;top:0;left:0;width:5px;height:5px;}
+.button span{background-position:bottom left;left:-5px;padding:0 0 5px 10px;margin-bottom:-5px;}
+.button span i{background-position:bottom right;margin-bottom:0;position:absolute;left:100%;width:10px;height:100%;top:0;}
+.button span span{background-position:top right;position:absolute;right:-10px;margin-left:10px;top:-5px;height:0;}
+.button.blue { background: #BFE9E6; }
+.button.green { background: #A5CD39; }
+.button:hover { background-color: #F7931E; }
+.button:active { background-color: #F7931E; }
+.button[class] { background-image: url(/images/btn_shade.png); background-position: bottom; }
+.inline-button{float:none;}
+* html .button span,* html .button i{float:left;width:auto;background-image:none;cursor:pointer;}/*ie hack*/
+.button_to{float:left;}
 /* general settings */
 body{margin:0;color:#4b3013;font:14px Arial,Helvetica,sans-serif;background:url(/images/bg-body.gif);}
 img{border-style:none;}
@@ -99,7 +114,7 @@ a:hover{text-decoration:none;}
 .twitter-ico{color:#4B3013;padding:4px 0 0 38px;background:url(/images/ico-twitter2.gif) no-repeat;display:inline-block;height:27px;}
 .column-holder{width:708px;margin:0 0 8px -30px;overflow:hidden;}
 .column-holder .cite-list{float:none;padding:0 0 4px 8px;}
-.column-holder .column{width:313px;float:left;padding-left:30px;}
+.column-holder .column{width:325px;float:left;padding-left:20px;}
 .column-holder .links{text-align:right;}
 .column-holder .links li{line-height:20px;}
 .ico-doc,
@@ -304,6 +319,7 @@ a:hover{text-decoration:none;}
 .scheduled-item .visual{display:inline-block;float:left;width:60px;}
 .scheduled-item .text-holder{display:inline-block;float:left;width:580px;padding:0 4px;}
 .scheduled-item .send-at{position:absolute;right:5px;bottom:5px;}
+.broadcast-edit{margin-top:6px;}
 /*Login/logout*/
 .login-form p{color:#FFF;font-family:'IM Fell DW Pica',arial,serif;font-size:18px;font-weight:bold;text-align:center;}
 .login-form p a{color:#FFF;}
