--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -11,6 +11,7 @@ blockquote,q{quotes:none;}
 table{border-collapse:collapse;border-spacing:0;}
 .spaced-10{margin:10px;}
 input,textarea,select{vertical-align:middle;font-family:inherit;font-size:1em;}
+/*Button code from http://monc.se/kitchen/95/scalable-buttons-update*/
 .button{display:inline-block;position:relative;background:#aaa;padding:5px;float:left;color:#fff;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
 .button *{font-style:normal;background-image:url(/images/btn_outline.png);background-repeat:no-repeat;display:block;position:relative;}
 .button-blue-back *{background-image:url(/images/btn_outline_blue.png)}
