--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -12,20 +12,20 @@ table{border-collapse:collapse;border-spacing:0;}
 .spaced-10{margin:10px;}
 input,textarea,select{vertical-align:middle;font-family:inherit;font-size:1em;}
 /*Button code from http://monc.se/kitchen/95/scalable-buttons-update*/
-.button{display:inline-block;position:relative;background:#aaa;padding:5px;float:left;color:#fff;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
-.button *{font-style:normal;background-image:url(/images/btn_outline.png);background-repeat:no-repeat;display:block;position:relative;}
-.button-blue-back *{background-image:url(/images/btn_outline_blue.png)}
-.button i{background-position:top left;position:absolute;margin-bottom:-5px;top:0;left:0;width:5px;height:5px;}
-.button span{background-position:bottom left;left:-5px;padding:0 0 5px 10px;margin-bottom:-5px;}
-.button span i{background-position:bottom right;margin-bottom:0;position:absolute;left:100%;width:10px;height:100%;top:0;}
-.button span span{background-position:top right;position:absolute;right:-10px;margin-left:10px;top:-5px;height:0;}
-.button.blue { background: #BFE9E6; }
-.button.green { background: #A5CD39; }
-.button:hover { background-color: #F7931E; }
-.button:active { background-color: #F7931E; }
-.button[class] { background-image: url(/images/btn_shade.png); background-position: bottom; }
+.pretty-button{display:inline-block;position:relative;background:#aaa;padding:5px;float:left;color:#fff;text-decoration:none;cursor:pointer;margin:2px;line-height:18px;}
+.pretty-button *{font-style:normal;background-image:url(/images/btn_outline.png);background-repeat:no-repeat;display:block;position:relative;}
+.pretty-button-blue-back *{background-image:url(/images/btn_outline_blue.png)}
+.pretty-button i{background-position:top left;position:absolute;margin-bottom:-5px;top:0;left:0;width:5px;height:5px;}
+.pretty-button span{background-position:bottom left;left:-5px;padding:0 0 5px 10px;margin-bottom:-5px;}
+.pretty-button span i{background-position:bottom right;margin-bottom:0;position:absolute;left:100%;width:10px;height:100%;top:0;}
+.pretty-button span span{background-position:top right;position:absolute;right:-10px;margin-left:10px;top:-5px;height:0;}
+.pretty-button.blue { background: #BFE9E6; }
+.pretty-button.green { background: #A5CD39; }
+.pretty-button:hover { background-color: #F7931E; }
+.pretty-button:active { background-color: #F7931E; }
+.pretty-button[class] { background-image: url(/images/btn_shade.png); background-position: bottom; }
 .inline-button{float:none;}
-* html .button span,* html .button i{float:left;width:auto;background-image:none;cursor:pointer;}/*ie hack*/
+* html .pretty-button span,* html .pretty-button i{float:left;width:auto;background-image:none;cursor:pointer;}/*ie hack*/
 .button_to{float:left;}
 /* general settings */
 body{margin:0;color:#4b3013;font:14px Arial,Helvetica,sans-serif;background:url(/images/bg-body.gif);}
@@ -314,6 +314,8 @@ a:hover{text-decoration:none;}
 .character{margin:10px;height:100px;width:100px;float:left;}
 #character-bio{margin:10px;clear:both;display:inline-block;}
 #character-bio img{float:left;display:inline-block;margin:0 10px 0 0;}
+/*projects*/
+.main-edit{display:inline-block;}
 /*broadcasts*/
 .no-broadcasts-msg{margin:10px;color:#4B3013;font-weight:bold;}
 .scheduled-item{width:650px;height:75px;vertical-align:top;font:13px "Trebuchet MS",Helvetica,sans-serif;padding:3px 2px;margin:5px;background:#00a69c;position:relative;}
