more styling fixes

--- a/app/views/projects/_options_list.html.erb
+++ b/app/views/projects/_options_list.html.erb
@@ -1,5 +1,5 @@
 <ul class="<%=css%>"> 
-	<li><%= follow_link(project) %></li> 
+	<li><%= follow_link(broadcast) %></li> 
 	<!--
 	<li><a href="#" class="doc">docs</a></li> 
 	<li><a href="#" class="comments">comments</a></li> 
