--- a/app/views/broadcasts/_broadcast.html.erb
+++ b/app/views/broadcasts/_broadcast.html.erb
@@ -1,11 +1,11 @@
 <li class="hidden-admin_links"> 
   <strong class="broadcast-title"><%= link_to broadcast.project.title, broadcast.project %></strong>
   <span class="date"><%= format_date_long(broadcast.start_at) %> to <%= format_date_long(broadcast.end_at) %></span>
-  <%= render 'projects/options_list', :project => broadcast.project, :css => 'follow-list' %>
+  <%= render 'projects/options_list', :project => broadcast.project, :broadcast => broadcast, :css => 'follow-list' %>
   <% if broadcast.project.can_edit?(current_user) -%>
-  <span class="edit admin-links broadcast-edit">
-    <%= button_to translate('general.edit'), edit_project_broadcast_path(broadcast.project, broadcast), :method => :get, :class => 'button green button-blue-back' %>
-    <%= button_to translate('general.delete'), broadcast_path(broadcast), :confirm => translate('general.delete_confirmation'), :method => :delete, :class => 'button green button-blue-back' %>    
-  </span>
+    <span class="edit admin-links">
+      <%= button_to translate('general.edit'), edit_project_broadcast_path(broadcast.project, broadcast), :method => :get, :class => 'pretty-button green pretty-button-blue-back' %>
+      <%= button_to translate('general.delete'), broadcast_path(broadcast), :confirm => translate('general.delete_confirmation'), :method => :delete, :class => 'pretty-button green pretty-button-blue-back' %>    
+    </span>
   <% end -%>
 </li>
