--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,6 +1,6 @@
 <div class="result-box"> 
 	<div class="heading">
-	  <%= render 'projects/options_list', :project => project, :css => 'options-list' %> 
+	  <%= render 'projects/options_list', :project => project, :broadcast => project.next_broadcast, :css => 'options-list' %> 
 		<h3 class="text-sinking3"><%= link_to project.title, project %></h3>
 	</div>
 	<span class="author"><strong>Recreated by:</strong><%= project.user.display_name %></span>
